--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 android {
     compileSdk 32
@@ -51,4 +52,17 @@ dependencies {
     //yandex map
     implementation 'com.yandex.android:maps.mobile:4.1.0-full'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
+
+    //Room
+    implementation 'androidx.room:room-common:2.5.0-alpha02'
+    implementation 'androidx.room:room-ktx:2.5.0-alpha02'
+    implementation 'androidx.room:room-runtime:2.5.0-alpha02'
+    kapt 'androidx.room:room-compiler:2.5.0-alpha02'
+
+    //Coin
+    def koin_version = "3.2.0"
+    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-android-compat:$koin_version"
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_version"
+    implementation "io.insert-koin:koin-androidx-navigation:$koin_version"
 }
